--- a/src/app/schedule/schedule.component.html
+++ b/src/app/schedule/schedule.component.html
@@ -1,24 +1,25 @@
-<ActionBar class="action-bar">
+<ActionBar class="action-bar" style="border-width: 1; border-color: transparent;">
     <!-- 
     Use the NavigationButton as a side-drawer button in Android
     because ActionItems are shown on the right side of the ActionBar
     -->
-    <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
+    <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()" class="my-nav-btn"></NavigationButton>
     <!-- 
     Use the ActionItem for IOS with position set to left. Using the
     NavigationButton as a side-drawer button in iOS is not possible,
     because its function is to always navigate back in the application.
     -->
     <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
-        ios.position="left">
+        ios.position="left" >
     </ActionItem>
-    <Label class="action-bar-title" text="Home"></Label>
+    <Label class="action-bar-title" text="Schedule" fontSize="14"></Label>
 </ActionBar>
 
-<TabView selectedIndex="0" sdkExampleTitle sdkToggleNavButton androidTabsPosition="bottom" >
-    <StackLayout *tabItem="{title: 'Workshops'}">
-      <Workshops></Workshops>
-    </StackLayout>
+<TabView selectedIndex="0" sdkExampleTitle sdkToggleNavButton androidTabsPosition="bottom"  >
+        <StackLayout *tabItem="{title: 'Workshops'}" textTransform="lowercase">
+                <Workshops></Workshops>
+            </StackLayout>
+  
     <StackLayout *tabItem="{title: 'NG Poland'}">
         <NgPoland></NgPoland>
     </StackLayout>
