--- a/src/app/speakers/speakers.component.html
+++ b/src/app/speakers/speakers.component.html
@@ -16,6 +16,8 @@
 </ActionBar>
 
 <GridLayout class="page page-content">
-    <Label class="page-icon fa" text="&#xf1ea;"></Label>
-    <Label class="page-placeholder" text="<!-- Page content goes here -->"></Label>
+    <StackLayout>
+        <SpeakersList></SpeakersList>
+    </StackLayout>
+    
 </GridLayout>
