--- a/src/app/speakers/speakers.component.html
+++ b/src/app/speakers/speakers.component.html
@@ -12,7 +12,7 @@
     <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
         ios.position="left">
     </ActionItem>
-    <Label class="action-bar-title" text="Speakers"></Label>
+    <Label class="action-bar-title" text="Speakers" style="font-size: 16;"></Label>
 </ActionBar>
 
 <GridLayout class="page page-content">
