--- a/src/app/schedule/containers/ngpoland/ng-poland.component.html
+++ b/src/app/schedule/containers/ngpoland/ng-poland.component.html
@@ -1,6 +1,4 @@
-<Label text="NG Poland" textWrap="true" class="h2 m-x-auto" color="blue"></Label>
-
-<ListView class="list-group" [items]="events$ | async" style="height:100%;">
+<ListView class="list-group" [items]="events$ | async" style="height:100%;" separatorColor="white">
 	<ng-template let-event="item">
 
 		<EventItem [eventItem]="event"></EventItem>
