workshops, info, about modules

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,10 +12,10 @@
     <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
         ios.position="left">
     </ActionItem>
-    <Label class="action-bar-title" text="Featured"></Label>
+    <Label class="action-bar-title" text="About"></Label>
 </ActionBar>
 
 <GridLayout class="page page-content">
-    <Label class="page-icon fa" text="&#xf005;"></Label>
+    <Label class="page-icon fa" text="&#xf121;"></Label>
     <Label class="page-placeholder" text="<!-- Page content goes here -->"></Label>
 </GridLayout>
