--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,11 @@ http://docs.telerik.com/devtools/nativescript-ui/Controls/NativeScript/SideDrawe
                     <Label col="1" text="Workshops" class="p-r-10"></Label>
                 </GridLayout>
 
+                <GridLayout columns="auto, *" class="sidedrawer-list-item" [class.selected]="isComponentSelected('/ng-girls')" (tap)="onNavItemTap('/ng-girls')">
+                    <Label col="0" text="&#xf182;" class="fa"></Label>
+                    <Label col="1" text="NG Girls" class="p-r-10"></Label>
+                </GridLayout>
+
                 <GridLayout columns="auto, *" class="sidedrawer-list-item" [class.selected]="isComponentSelected('/speakers')" (tap)="onNavItemTap('/speakers')">
                     <Label col="0" text="&#xf0c0;" class="fa"></Label>
                     <Label col="1" text="Speakers" class="p-r-10"></Label>
