--- a/src/app/schedule/containers/ngpoland/ng-poland.component.html
+++ b/src/app/schedule/containers/ngpoland/ng-poland.component.html
@@ -1,4 +1,4 @@
-<ListView class="list-group" [items]="events$ | async" style="height:100%;" separatorColor="white">
+<ListView class="list-group" [items]="events$ | async" style="height:100%;" separatorColor="#ffffff">
 	<ng-template let-event="item">
 
 		<EventItem [eventItem]="event"></EventItem>
