--- a/src/app/speakers/components/speaker/speaker.component.html
+++ b/src/app/speakers/components/speaker/speaker.component.html
@@ -1,5 +1,5 @@
-<StackLayout style="padding: 10 10;">
-    <CardView class="cardStyle" margin="10" elevation="10" radius="1" style="max-width: 450;margin: 10;">
+<!-- <StackLayout style="padding: 10 10;">
+    <StackLayout class="cardStyle"style="max-width: 450;margin: 10;">
         <FlexboxLayout width="auto" height="380" flexDirection="column" style="padding: 10 20;">
             <FlexboxLayout height="13%" flexDirection="column" alignItems="center" justifyContent="center">
                 <Label [text]="speaker.name" fontWeight="bold" fontSize="20" verticalAlignment="center" textAlignment="center"
@@ -21,5 +21,17 @@
             </FlexboxLayout>
 
         </FlexboxLayout>
-    </CardView>
+    </StackLayout>
+</StackLayout> -->
+
+<StackLayout style="padding: 10 5;">
+    <StackLayout class="cardStyle2"style="margin: 5;" #sl (tap)="showModal(sl)">
+        <GridLayout rows="auto, *" columns="100, *" style="padding: 5 5;">
+            <Image row="0" col="0" rowSpan="2" [src]="speaker.photo.getImageUrl()" borderRadius="500" horizontalAlignment="center" width="auto"
+            height="95%" style="margin-right: 15;"></Image>
+            <Label row="0" col="1" [text]="speaker.name" fontWeight="bold" fontSize="14" verticalAlignment="center" textAlignment="left"
+            style="color: #3C4043;"></Label>
+            <Label row="1" col="1" [text]="speaker.role" textWrap="true" textAlignment="left" fontSize="12" style="color: #3C4043;"></Label>
+        </GridLayout>
+    </StackLayout>
 </StackLayout>
