--- a/src/app/ng-girls/ng-girls.component.html
+++ b/src/app/ng-girls/ng-girls.component.html
@@ -4,24 +4,18 @@
     because ActionItems are shown on the right side of the ActionBar
     -->
     <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
-
-    
     <!-- 
     Use the ActionItem for IOS with position set to left. Using the
     NavigationButton as a side-drawer button in iOS is not possible,
     because its function is to always navigate back in the application.
     -->
     <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
-    ios.position="left">
-        </ActionItem>
-        
-
-    <Label class="action-bar-title" text="Speakers" style="font-size: 16;"></Label>
+        ios.position="left">
+    </ActionItem>
+    <Label class="action-bar-title" text="NG Girls"></Label>
 </ActionBar>
 
 <GridLayout class="page page-content">
-    <StackLayout style="padding: 10 5;">
-        <SpeakersList></SpeakersList>
-    </StackLayout>
-    
+    <Label class="page-icon fa" text="&#xf182;"></Label>
+    <Label class="page-placeholder" text="<!-- Page content goes here -->"></Label>
 </GridLayout>
