--- a/src/app/speakers/components/speaker/speaker.component.css
+++ b/src/app/speakers/components/speaker/speaker.component.css
@@ -2,4 +2,36 @@
 .cardStyle {
     background-color: #ffffff;
     color: #000000;
+    border-color: #3949ab;
+    border-width: 1px;
+}
+
+
+.cardStyle2 {
+    background-color: #ffffff;
+    color: #000000;
+}
+
+.highlighted {
+    animation-name: animation;
+    animation-duration: 0.6s;
+}
+
+@keyframes animation {
+    from {
+
+        opacity: 1;
+        transform: scale(1);
+
+       
+
+    }
+    50% {
+        opacity: 0.8;
+        transform: scale(0.9);
+    }
+    to {
+        opacity: 1;
+        transform: scale(1.0);
+    }
 }
