--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,8 @@ http://docs.telerik.com/devtools/nativescript-ui/Controls/NativeScript/SideDrawe
 <RadSideDrawer [drawerTransition]="sideDrawerTransition">
     <GridLayout tkDrawerContent rows="auto, *" class="sidedrawer sidedrawer-left">
         <StackLayout row="0" class="sidedrawer-header" style="background-color: white;">
-            <Label class="sidedrawer-header-image fa" text="&#xf2bd;"></Label>
-            <Label class="sidedrawer-header-brand" text="User Name"></Label>
-            <Label class="footnote" text="username@mail.com"></Label>
+           <Image src="https://images.ctfassets.net/87a5voy5in4s/9uRJGpXuBGsACgMcUuikm/031824a03fc64a6b22dcd24675196f98/logo.png" ></Image>
+           
         </StackLayout>
     
         <ScrollView row="1">
