--- a/src/app/ng-girls/ng-girls.component.html
+++ b/src/app/ng-girls/ng-girls.component.html
@@ -9,13 +9,19 @@
     NavigationButton as a side-drawer button in iOS is not possible,
     because its function is to always navigate back in the application.
     -->
-    <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()"
-        ios.position="left">
+    <ActionItem icon="res://navigation/menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()" ios.position="left">
     </ActionItem>
-    <Label class="action-bar-title" text="NG Girls"></Label>
+    <Label class="action-bar-title" text="ngGirls"></Label>
 </ActionBar>
 
-<GridLayout class="page page-content">
-    <Label class="page-icon fa" text="&#xf182;"></Label>
-    <Label class="page-placeholder" text="<!-- Page content goes here -->"></Label>
-</GridLayout>
+<ScrollView>
+    
+    
+    <StackLayout style="padding: 15 15;" *ngIf="content$ | async as content; else nocontent">
+            <Image src="res://nggirls" style="width: 70%;margin-bottom: 20;margin-top: 20;"></Image>
+        <Label [text]="content.text" textWrap="true" style="color: #3C4043;"></Label>
+    </StackLayout>
+    <ng-template #nocontent>
+        <Label text="No content" fontSize="28" textAlignment="center"></Label>
+    </ng-template>
+</ScrollView>
