--- a/src/app/speakers/containters/speakers-list/speakers-list.component.html
+++ b/src/app/speakers/containters/speakers-list/speakers-list.component.html
@@ -1,7 +1,14 @@
-<ListView class="list-group myclass" [items]="speakers$ | async" style="height: 100%;" separatorColor="#ff1744" >
-	<ng-template let-speaker="item">
 
-		<Speaker [speaker]="speaker" ></Speaker>
 
-	</ng-template>
-</ListView>
+<StackLayout *ngIf="speakers$ | async as speakers; else nocontent">
+		<ListView class="list-group myclass" [items]="speakers" style="height: 100%;" separatorColor="#ff1744" >
+				<ng-template let-speaker="item">
+			
+					<Speaker [speaker]="speaker" ></Speaker>
+			
+				</ng-template>
+			</ListView>
+</StackLayout>
+<ng-template #nocontent>
+		<ActivityIndicator row="1" #activityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
+</ng-template>
