--- a/src/app/workshops/workshops.component.html
+++ b/src/app/workshops/workshops.component.html
@@ -16,13 +16,20 @@
 
 <GridLayout class="page page-content">
 	<StackLayout style="padding: 10 5;">
-		<ListView class="list-group" [items]="workshops$ | async" style="height: 100%;" separatorColor="#ff1744">
-			<ng-template let-workshop="item">
 
-				<Workshop [workshop]="workshop"></Workshop>
-
+			<StackLayout *ngIf="workshops$ | async as workshops; else nocontent">
+					<ListView class="list-group" [items]="workshops" style="height: 100%;" separatorColor="#ff1744">
+							<ng-template let-workshop="item">
+				
+								<Workshop [workshop]="workshop"></Workshop>
+				
+							</ng-template>
+						</ListView>
+			</StackLayout>
+			<ng-template #nocontent>
+					<ActivityIndicator row="1" #activityIndicator busy="true" width="100" height="100" class="activity-indicator"></ActivityIndicator>
 			</ng-template>
-		</ListView>
+		
 	</StackLayout>
 
 </GridLayout>
