--- a/src/_app-common.scss
+++ b/src/_app-common.scss
@@ -4,6 +4,10 @@
 .fa {
     font-family: "FontAwesome";
 }
+
+.fa-b {
+    font-family: "FontAwesomeBrands";
+}
 // Common page class
 .page-content {
     .page-placeholder {
