--- a/src/app/schedule/schedule.component.css
+++ b/src/app/schedule/schedule.component.css
@@ -1,1 +1,10 @@
-TabView{tab-text-color:#3949ab;selected-tab-text-color:#ff1744;tab-background-color:#ffffff;android-selected-tab-highlight-color:#ff1744}TabViewItem{text-transform:none}
+TabView {
+  tab-text-color: #3949ab;
+  selected-tab-text-color: #ff1744;
+  tab-background-color: #ffffff;
+  android-selected-tab-highlight-color: #ff1744;
+  text-transform: none;
+}
+TabViewItem {
+  text-transform: none;
+}
